--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.9.14",
     "expo": "~52.0.46",
+    "expo-audio": "~0.3.5",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "^5.0.20",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-secure-store": "^14.0.1",
