--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.9.14",
+    "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.74.4",
     "expo": "~52.0.46",
     "expo-audio": "~0.3.5",
     "expo-constants": "~17.0.8",
